fix colors for supply directive, and fix alignment for adding user

--- a/app/styles/auth/user/add_user.less
+++ b/app/styles/auth/user/add_user.less
@@ -2,6 +2,7 @@
 
 .addUserPage{
   .addPage;
+  left:200px;
   
   /*
    * Modal
