--- a/app/styles/components/supply.less
+++ b/app/styles/components/supply.less
@@ -1,7 +1,7 @@
 .supply-directive{
 	cursor:pointer;
     width:100%;
-    color:#CCC;
+    color:rgba(0, 0, 0, 1);
     font-family:proxima;
     letter-spacing:0.08em;
     text-decoration:none;
@@ -182,7 +182,7 @@
 			
 			.barcode{
 				font-family:Barcode;
-				color:#CCC;
+			    color:rgba(0, 0, 0, 1);
 				background:@activeBackgroundColor;
 				border:1px solid darken(@activeBackgroundColor, 5%);
 				border-radius: 5px;
@@ -234,7 +234,7 @@
 					
 					.title{
 						position:absolute;
-						color:#CCC;
+					    color:rgba(0, 0, 0, 1);
 						top:0.1em;
 						left:0.1em;
 						font-size:1em;
@@ -243,7 +243,7 @@
 					.price-box{
 						width:6em;
 						background-color:red;
-						color:#CCC;
+					    color:rgba(0, 0, 0, 1);
 						margin-left:1em;
 						position:absolute;
 						bottom:0;
@@ -280,7 +280,7 @@
 								left:0;
 								width:100%;
 								text-align:center;
-								color:#CCC;
+							    color:rgba(0, 0, 0, 1);
 							}
 							
 							&.date{
@@ -331,7 +331,7 @@
 				
 				.barcode{
 					font-family:Barcode;
-					color:#CCC;
+				    color:rgba(0, 0, 0, 1);
 					background:@activeBackgroundColor;
 					border:1px solid darken(@activeBackgroundColor, 5%);
 					border-radius: 5px;
@@ -369,7 +369,7 @@
 					
 						.title{
 							position:absolute;
-							color:#CCC;
+						    color:rgba(0, 0, 0, 1);
 							top:0.1em;
 							left:0.1em;
 							font-size:1em;
@@ -378,7 +378,7 @@
 						.price-box{
 							width:6em;
 							background-color:black;
-							color:#CCC;
+						    color:rgba(0, 0, 0, 1);
 							margin-left:1em;
 							position:absolute;
 							bottom:0;
@@ -415,7 +415,7 @@
 									left:0;
 									width:100%;
 									text-align:center;
-									color:#CCC;
+								    color:rgba(0, 0, 0, 1);
 								}
 							
 								&.date{
